Tests/Bad/Fonctions/factorielle2.tig
let 
    function factorec(n:int):int
        if n=0
            then 1
            else n*factorec(n-1)
in 
    factorec(1O)
end 

